# Govee-BLE-MQTT

./: pyproject.toml
govee_ble_mqtt/: ble.py  cli.py  mqtt.py  protocol.py
